--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Мы ценим своих клиентов. Прямо сейчас есть <strong>возможность приобрести горный 
         велосипед</strong> по <strong>20% скидке</strong>. Заказывайте, звоните, пишите. Вперед к новым вершинам!</p>
 
-        <img src="imgs/orig.png" width="200">
+        <img src="avatar.jpeg" width="200">
 
         <br>
 
